# fastapi_starter_template

./: .dockerignore  .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: pylint.yml
containers/: Dockerfile
src/: main.py
src/app/: settings.py  utils.py
src/app/collectors/: __init__.py  hello.py
src/app/collectors/api/: __init__.py
src/app/collectors/api/temu/: device_gen.py
src/app/collectors/v1/: __init__.py  hello.py
src/fastapi_starter_template/app/api/: __init__.py
src/fastapi_starter_template/app/api/routes/: __init__.py  hello.py
src/fastapi_starter_template/app/api/v1/: __init__.py
