[project]
name = "fastapi-starter-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "environs>=11.2.1",
    "fastapi[all]>=0.115.12",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "uvicorn>=0.33.0",
]

[tool.ruff]
line-length = 100                       # https://beta.ruff.rs/docs/settings/
indent-width = 4
unsafe-fixes = true
respect-gitignore = true                # Exclude a variety of commonly ignored directories.

# format
format.docstring-code-format = true
format.quote-style = "single"

# lint
lint.select = ["E", "W", "F"]           # https://beta.ruff.rs/docs/rules/
lint.ignore = ["F401"]
